# UV_segmentation_Robotic_pick

./: .gitignore  MYCOBOT320_SIM_PLAN.md  REALSENSE_INTEGRATION.md  check_realsense.sh
Dockerfile/: Dockerfile  README.md
install/: local_setup.sh  setup.sh
install/spraying_pathways/share/spraying_pathways/: package.bash  package.zsh
log/: latest_build
ros2_ws/: .gitignore  MYCOBOT_320_SETUP_SUMMARY.md  MYCOBOT_TEST_RESULTS.md  POINT_CLOUD_COLLISION_PLAN.md  README.md  ROBOT_SETUP_ANALYSIS.md  add_pointcloud_to_rviz.sh  build_output.txt  diagnose_mycobot.py  diagnose_realsense.sh  frames_2026-02-09_16.59.20.gv  install_local.sh  launch_gazebo_sim.sh  launch_local.sh  launch_mycobot320_realsense.sh  launch_mycobot320_sim.sh  launch_mycobot320_sim_debug.sh  launch_real_robot.sh  launch_sim.sh  run_go_home.sh  test_arm.py  trajectory_output.csv
ros2_ws/.agents/skills/moveit2-integration/: SKILL.md
ros2_ws/.agents/skills/moveit2-integration/references/: config_guide.md  gazebo-integration.md  launch-examples.md  planning_patterns.md  srdf-patterns.md  troubleshooting.md
ros2_ws/.agents/skills/moveit2-integration/scripts/: moveit_diagnostic.sh  moveit_helper.py  validate_robot_description.py
ros2_ws/.agents/skills/moveit2-ros2-humble/: SKILL.md
ros2_ws/.agents/skills/moveit2-ros2-humble/references/: gazebo-sim.md  srdf-examples.md
ros2_ws/.agents/skills/moveit2-ros2-humble/scripts/: generate_collision_matrix.py  template_robot_moveit_config.sh
ros2_ws/.agents/skills/ros2-launch-analyzer/: SKILL.md
ros2_ws/.agents/skills/ros2-launch-analyzer/references/: common_node_types.md  gazebo_ros_patterns.md  moveit_launch_patterns.md
ros2_ws/.agents/skills/ros2-launch-analyzer/scripts/: analyze_launch.py
ros2_ws/src/Arduino/: sprayvalve.ino  test_valve.ps1
ros2_ws/src/mycobot_description/: CMakeLists.txt
ros2_ws/src/mycobot_description/end_effector_soft/eend_eff.SLDASM/: CMakeLists.txt  package.xml
ros2_ws/src/mycobot_description/launch/: robot_state_publisher.launch.py
ros2_ws/src/mycobot_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  mycobot_320_ros2_control.urdf.xacro  mycobot_320_ur_ros2_control.urdf.xacro
ros2_ws/src/mycobot_description/urdf/mech/: YOUR_EE_NAME.urdf.xacro  (+3 more)
ros2_ws/src/rapseb_hri_safety/: README.md  hri_safety_guard.py
ros2_ws/src/rapseb_hri_safety/launch/: hri_safety_guard.launch.py
ros2_ws/src/spraying_pathways/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/spraying_pathways/config/: controllers.yaml  minimal_controllers.yaml  mycobot_320_realsense.rviz
ros2_ws/src/spraying_pathways/config/mycobot_320/: README.md  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_320.srdf  ompl_planning.yaml  ros2_controllers.yaml  view_robot.rviz
ros2_ws/src/spraying_pathways/config/mycobot_320_ur/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_controllers_real_simple.yaml  mycobot_320_ur.srdf  ompl_planning.yaml  ros2_controllers.yaml  ros2_controllers_real.yaml
ros2_ws/src/spraying_pathways/include/spraying_pathways/: multi_box_sdf.hpp  pointcloud_ops.hpp  spray_trajectory.hpp  spraying_grid.hpp  types.hpp
ros2_ws/src/spraying_pathways/launch/: bringup.launch.py  bringup_mycobot_320_gz_sim.launch.py  bringup_mycobot_320_realsense.launch.py  bringup_mycobot_320_v4.launch.py  bringup_v2.launch.py  bringup_v3.launch.py  bringup_v4.launch.py  bringup_v4_gz_sim.launch.py  bringup_v5.launch.py  gz_sim_complete.launch.py  gz_sim_debug.launch.py  gz_sim_final.launch.py  gz_sim_simple.launch.py  real_robot.launch.py  realsense_d456_stand.launch.py  spray_valve.launch.py
ros2_ws/src/spraying_pathways/materials/scripts/: seaweed.material
ros2_ws/src/spraying_pathways/models/black_table/: model.config  model.sdf
ros2_ws/src/spraying_pathways/models/box_0_5/: model.config  model.sdf
ros2_ws/src/spraying_pathways/models/human_arm/: model.config  model.sdf
ros2_ws/src/spraying_pathways/models/human_arm/meshes/: Doc1.docx
ros2_ws/src/spraying_pathways/models/wood_table/: model.sdf
ros2_ws/src/spraying_pathways/rviz/: mycobot_320_realsense_minimal.rviz  view_robot.rviz
ros2_ws/src/spraying_pathways/scripts/: depth_dip_detector_v1.py  ee_velocity_monitor.py  mycobot_driver.py  obstacles_tracking.py  plot_trajectory.py  plot_trajectory_log.py  pointcloud_collision_filter.py  pointcloud_transform_and_unknown_filter.py  pointcloud_transform_and_unknown_filter_v2.py  pointcloud_transform_and_unknown_filter_v3.py  robot_self_filter.py  spray_valve_node.py  test_mycobot_setup.sh  trajectory_logger.py  transform_camera_pointcloud.py  unknown_object_detector.py
ros2_ws/src/spraying_pathways/src/: cartesian_path_planner_cubes_test_go_v1.cpp  cartesian_path_planner_cubes_test_go_v1_mycobot320.cpp  cartesian_path_planner_cubes_test_go_v2.cpp  cartesian_path_planner_cubes_test_v1.cpp  cartesian_path_planner_cubes_test_v2.cpp  cartesian_path_planner_cubes_v2.cpp  cartesian_path_planner_cubes_v3.cpp  cartesian_path_planner_cubes_v4.cpp  cartesian_path_planner_trajectory_v1.cpp  cartesian_path_planner_trajectory_v1_mycobot320.cpp  flat_fan_spraying.cpp  flat_fan_spraying_v2.cpp  flat_fan_spraying_v3.cpp  flat_fan_spraying_v4.cpp  follow_joints_positions.cpp  go_home.cpp  inspect_flatness.cpp  lidar_surface_scanner.cpp  moving_obstacle.cpp  safety_stop_on_unknown.cpp  self_filter.cpp  test.cpp  trajectory_output.csv
ros2_ws/src/spraying_pathways/urdf/: 2d_lidar.urdf.xacro  depth_camera.urdf.xacro  depth_camera_ee.urdf.xacro  my_robot.urdf.xacro  my_robot_gz_sim.urdf.xacro  mycobot_320_robot.urdf.xacro
ros2_ws/src/spraying_pathways/worlds/: empty_world_gz_sim.sdf  first_test_case.world  mycobot_320_world.sdf  mycobot_world.world  table_world.world  table_world_gz_sim.sdf
skills/: moveit2-ros2-humble.skill
skills/moveit2-ros2-humble/assets/templates/: gazebo_sim.launch.py  robot.urdf.xacro
skills/moveit2-ros2-humble/references/: perception.md  troubleshooting.md
skills/moveit2-ros2-humble/scripts/: check_moveit_config.py
(+12 files in other folders)
