<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spraying_pathways</name>
  <version>0.0.0</version>
  <description>Package for robot spraying and trajectory logging</description>

  <maintainer email="sidiropoulosgeorgios000@gmail.com">Georgios Sidiropoulos</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ and Python dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>gazebo_ros</depend>
  <depend>tf2_ros</depend>
  <depend>control_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>moveit_core</depend>
  <depend>trajectory_msgs</depend>
  <depend>python3-serial</depend>

  <!-- Additional dependencies for lidar_surface_scanner.py -->
  <depend>tf2_sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>

  <!-- PCL support -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Optional: laser projection -->
  <depend>laser_geometry</depend>


  <!-- MoveIt -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>


  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>